# SimpleLogger

./: CHANGELOG  CMakeLists.txt  Jenkinsfile  LICENSE  README.md
src/: CMakeLists.txt  logger.cpp  simple_logger.cpp  simple_logger.hpp
src/tests/: CMakeLists.txt
src/tests/batch_test/: CMakeLists.txt  batch_test.cpp  collapse_test.cpp  collapse_timestamp_test.cpp
src/tests/file_test/: file_test.cpp
src/tests/hello_world/: hello_world.cpp
src/tests/stream_test/: stream_test.cpp
